fix(diagram): harden generation and downloadable exports